--- a/index.html
+++ b/index.html
@@ -9,8 +9,7 @@
 		<meta name="viewport" content="width= device-width, initial-scale =1">
 		<link href="css/bootstrap.min.css" rel="stylesheet">
 		<script src = "js/jquery-min.js"> </script>
-		
-		<script src="http://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/js/bootstrap.min.js"></script>
+		<script src="js/bootstrap.min.js"></script>
 		
 	</head>
 	<body>
