--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
 
   <body>
     <header>
-      <a href="/"><img class="profile_pic" src="img/profilepic.jpg"></a>
+      <a href="/"><img class="profile_pic" src="img/linked.jpg"></a>
       <p class = "hp">Ankit Gupta<br><span class="hs">Front End Web Developer</span></p>
     </header>
 
